--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.1",
     "heroku": "^7.46.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.15"
+    "mongoose": "^5.13.15",
+    "mongoskin": "^2.1.0",
+    "realm": "^11.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
